third_party/move/move-compiler-v2/tests/bytecode-generator/fields_invalid.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/bytecode-generator/fields_invalid.move:13:19
   │
13 │         x.g.h = 42;
   │                   ^

// -- Model dump before bytecode pipeline
module 0x42::fields {
    struct T {
        h: u64,
    }
    struct S {
        f: u64,
        g: fields::T,
    }
    private fun write_ref(x: &fields::S) {
        select fields::T.h<fields::T>(select fields::S.g<&fields::S>(x)) = 42;
        Tuple()
    }
} // end 0x42::fields


Diagnostics:
error: expected `&mut` but found `&fields::S`
   ┌─ tests/bytecode-generator/fields_invalid.move:13:9
   │
13 │         x.g.h = 42;
   │         ^
